# statorEditor

./: .gitignore  CMakeLists.txt  Parts.json  Recipes.json  userSave1.json  vcpkg.json
srcs/: guiInfo.hpp  main.cpp  nodeGui.cpp  nodeGui.hpp  statorGui.cpp  statorGui.hpp  statorGuiSetup.cpp
srcs/stator/: data.hpp  factory.hpp  stator.hpp  statorNode.cpp  statorNode.hpp
